0023175: Failed to segment a periodic B-Spline when parameter coincides with existing knot